k8s-raw/destinations.yaml
apiVersion: v1
kind: Service
metadata:
  name: destinations
  namespace: kong-air
spec:
  selector:
    app: destinations
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: destinations
  namespace: kong-air
spec:
  replicas: 2
  selector:
    matchLabels:
      app: destinations
  template:
    metadata:
      labels:
        app: destinations
    spec:
      containers:
      - name: destinations
        image: docker.io/kongair/destinations:latest # Replace with your Docker image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 10
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: destinations
  namespace: kong-air
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /destinations
      backendRefs:
        - name: destinations
          port: 80
