k8s-raw/flights.yaml
apiVersion: v1
kind: Service
metadata:
  name: flights
  namespace: kong-air
spec:
  selector:
    app: flights
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flights
  namespace: kong-air
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flights
  template:
    metadata:
      labels:
        app: flights
    spec:
      containers:
      - name: flights
        image: docker.io/kongair/flights:latest # Replace with your Docker image
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 10
---
kind: HTTPRoute
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: flights
  namespace: kong-air
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kong
      namespace: kong
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /flights
      backendRefs:
        - name: flights
          port: 80
